--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -39,7 +39,7 @@
                     <div class="errors-container">
                         <div *ngIf="detail.errors && (detail.dirty || detail.touched)">
                             <div [hidden]="!detail.errors.required">
-                                <span class="error-msg">Question detail is required</span>
+                                <span class="error-msg">Required</span>
                             </div>
                         </div>
                     </div>
