--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -2,7 +2,7 @@
     <test-conduct-header></test-conduct-header>
     <div class="content-block">
         <h2>Test Instructions</h2>
-        <p class="test-conduct-subtitle">Please read the Test Instructions carefully before starting the test.</p>
+        <p class="test-conduct-subtitle">Please read the test instructions carefully before starting the test.</p>
         <p class="test-info"><span class="h4">Total Test Duration: </span><span class="h2">{{testInstructions.duration}} mins</span></p>
         <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">{{testInstructions.totalNumberOfQuestions}}</span></p>
         <p class="test-info"><span class="h4">Marking Pattern: </span></p>
