--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -2,7 +2,7 @@
     <div class="spinner">
     </div>
 </div>
-<div class="dialog" >
+<div class="dialog">
     <div class="dialog-title clearfix">
         <h1 class="pull-left" md-dialog-title>Change Password</h1>
         <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
@@ -13,7 +13,7 @@
                 <label>Current Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
-                    <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && !oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
+                    <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && oldpassword.errors.required' class='error-msg'>Please enter your current password.</span>
                     <span class='error-msg' *ngIf="errorCorrection">{{errorMesseage}}</span>
                 </div>
             </div>
@@ -21,15 +21,15 @@
                 <label>New Password</label>
                 <input required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W]).{8,14}$" type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" />
                 <div class="errors-container">
-                    <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.dirty && !newpassword.valid' class='error-msg'>Please enter new password</span>
-                    <span *ngIf='newpassword.errors && newpassword.errors.pattern && !newpassword.valid' class='error-msg'>Password must be alphanumeric including at least 1 uppercase letter,1 lowercase letter and a special character with 8 to 14 characters</span>
+                    <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.dirty && !newpassword.valid' class='error-msg'>Please enter your new password.</span>
+                    <span *ngIf='newpassword.errors && newpassword.errors.pattern && !newpassword.valid' class='error-msg'>Password must be alphanumeric including at least 1 uppercase letter,1 lowercase letter and a special character with 8 to 14 characters.</span>
                 </div>
             </div>
             <div class="form-group">
                 <label>Confirm Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
-                    <span *ngIf='confirmpassword.errors && confirmpassword.dirty && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
+                    <span *ngIf='confirmpassword.errors && confirmpassword.dirty && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password.</span>
                     <span class='error-msg' *ngIf="!isPasswordSame">New password and confirm password do not match</span>
                 </div>
             </div>
