--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -15,8 +15,8 @@
                     <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)"><em class="material-icons danger-text">close</em></button>
                 </span>
                 <span class="errors-container">
-                    <span class="error-msg" *ngIf="isWhiteSpaceError || (name.dirty && !name.valid && name.errors.required)">Name is required</span>
-                    <span class="error-msg" *ngIf="name.dirty && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special symbols are @, _ and white space</span>
+                    <span class="error-msg" *ngIf="isWhiteSpaceError || (name.dirty && !name.valid && name.errors.required)">Required</span>
+                    <span class="error-msg" *ngIf="name.dirty && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special symbols are @, _ and white space.</span>
                     <span class="error-msg" *ngIf="isTestNameExist">Test with this name already exists</span>
                 </span>
             </span>
