--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -2,7 +2,7 @@
     <div class="spinner"></div>
 </div>
 <div class="test-report">
-    <div class="test-create-header clearfix">
+    <div class="test-create-header clearfix" *ngIf="!loader">
         <div class="container">
             <h1 class="pull-left">
                 <span class="test-name">{{test.testName}}</span>
@@ -20,7 +20,7 @@
             </div>
             <a class="pull-right back-link" [routerLink]="['/tests']">< back</a>
         </div>
-        <h5 class="mt20 mb20">No Record(s) Found.</h5>
+        <h5 *ngIf="!loader" class="mt20 mb20">No Record(s) Found.</h5>
     </div>
     <div class="container" *ngIf="isAnyCandidateExist">
         <div class="report-title-block clearfix">
