Solved the issues which were identified after testing of the application.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -46,7 +46,7 @@
                 <h3 class="mb20">Percentage</h3>
                 <h1>{{percentage}} %</h1>
               </div>
-              <div class="percentile">
+              <div class="percentile" *ngIf="isPercentileVisible">
                 <h3 class="mb20">Percentile</h3>
                 <h1>{{percentile}}</h1>
               </div>
